2008-09-23  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_set_property):
	Fix setting the qos.

2008-09-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_state_header),
	(gst_qtdemux_chain):
	Some 'broken' files out there have atom lengths of zero...
	which basically results in qtdemux consuming that atom again and again
	until the *end of night* !
	Detect that and emits an adequate element error message.

2008-09-17  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/interleave/Makefile.am:
	* gst/matroska/Makefile.am:
	Fix build flags order.

	* tests/check/elements/audioamplify.c: (GST_START_TEST):
	* tests/check/elements/audiodynamic.c: (GST_START_TEST):
	* tests/check/elements/audioinvert.c: (GST_START_TEST):
	* tests/check/elements/audiopanorama.c: (GST_START_TEST):
	Format fixes.

	* tests/check/elements/multifile.c:
	Pull in unistd.h

2008-09-15  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtpmp4gdepay.c: (gst_rtp_mp4g_depay_init),
	(gst_rtp_mp4g_depay_finalize), (gst_rtp_mp4g_depay_setcaps),
	(gst_rtp_mp4g_depay_clear_queue), (gst_rtp_mp4g_depay_flush_queue),
	(gst_rtp_mp4g_depay_queue), (gst_rtp_mp4g_depay_process),
	(gst_rtp_mp4g_depay_change_state):
	* gst/rtp/gstrtpmp4gdepay.h:
	Handle interleaved streams by reordering AU in a queue.

2008-09-15  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtpmp4gdepay.c: (gst_bs_parse_init),
	(gst_bs_parse_read), (gst_rtp_mp4g_depay_process):
	Change some of the ranges in the caps, mostly for the amount of bits we
	can use.
	Added a little bitstream parse and use it to parse the AU header fields.
	Check for malformed and wrongly sized packets better.
	Implement more header field parsing.
	Handle the size of fragmented packets correctly.

2008-09-14  Edward Hervey  <edward.hervey@collabora.co.uk>

	Patch by: Jonathan Matthew <notverysmart@gmail.com>
	* gst/qtdemux/qtdemux.c: (qtdemux_video_caps):